# ROS_MOVE_BASE

src/: malek.py  move.py
src/goals/: CMakeLists.txt  package.xml
src/goals/src/: goals.py
src/launcher/launch/: robot2.launch
src/launcher/src/: service.py  service_backup.txt
src/lidar/: CMakeLists.txt  package.xml
src/lidar/launch/: sensors.launch
src/lidar/src/: cable_state.py  cpl2range.py  imu_node.py  test.py  test2.py
src/navigation/: CMakeLists.txt  package.xml
src/navigation/config/: costmap_common_params_waffle.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml  teb_local_planner_params.yaml
src/navigation/launch/: amcl.launch  move_base.launch  navigation.launch
src/navigation/maps/: maps.yaml
src/slam/: CMakeLists.txt  package.xml
src/slam/launch/: gmapping.launch
src/transforms/: CMakeLists.txt  package.xml
src/transforms/launch/: display.launch  transforms.launch
src/transforms/meshes/: base_link.STL  caster_wheel_link.STL  lidar_alm_link.STL  link_left_wheel.STL  link_right_wheel.STL  para_cyl_link.STL
src/transforms/rviz/: visualization.rviz
src/transforms/src/: odom_listener.py  odom_transformer.py
src/transforms/urdf/: taleb_bot.csv  taleb_bot.urdf
